almost there. some alignment fixes needed

--- a/client/src/scss/styles.scss
+++ b/client/src/scss/styles.scss
@@ -5,7 +5,6 @@
 
 .container {
   display: grid;
-  grid-gap: 20px;
   grid-template-areas: "headline" "toolbar" "flights";
   margin: 0 auto;
   max-width: 800px;
@@ -28,7 +27,7 @@
   border: 1px solid rgba(255, 255, 255, 0.453012);
   box-sizing: border-box;
   box-shadow: 0px 2px 130px rgba(0, 0, 0, 0.5);
-  border-radius: 8px;
+  border-radius: 8px 8px 0 0;
   grid-area: toolbar;
   grid-template-columns: minmax(100px, auto) repeat(3, 200px);
 }
@@ -51,11 +50,10 @@
 .flights {
   background: linear-gradient(180deg, rgba(255, 255, 255, 0.84) 32.59%, #C2C2C2 100%);
   border-radius: 8px;
-  border: 1px solid rgba(255, 255, 255, 0.453012);
   box-shadow: 0 2px 130px rgba(0, 0, 0, 0.5);
   box-sizing: border-box;
   grid-area: flights;
-  grid-template-columns: 100px 100px  100px  100px minmax(300px, auto) 100px 100px ;
+  grid-template-columns: 1fr 1fr  1fr  1fr 300px 1fr 1fr ;
   margin: 0 auto;
   width: 960px;
 }
@@ -64,6 +62,7 @@
   background: rgba(255, 255, 255, 0.843495);
   box-shadow: 0px 2px 10px rgba(8, 13, 35, 0.366027);
   display: grid;
+  padding: 15px;
   grid-template-columns: inherit;
 }
 
@@ -74,6 +73,9 @@
   font-size: 17px;
   line-height: 17px;
   color: #043D67;
+  grid-gap: 20px;
+
   display: grid;
   padding: 5px;
+  white-space: nowrap;
 }
